@@ -1,5 +1,14 @@
 2019-11-18  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* chopstx-gnu-linux.c (chx_systick_init_arch): Rename.
+	(chx_interrupt_controller_init): Rename.
+	* chopstx-cortex-m.c (chx_systick_init_arch): Rename.
+	(chx_interrupt_controller_init): Rename.
+	* chopstx.c (chx_systick_init): Use chx_systick_init_arch.
+	(chx_init): Use chx_interrupt_controller_init.
+
+2019-11-18  NIIBE Yutaka  <gniibe@fsij.org>
+
 	* chopstx.c (chx_ready_pop): Check flag_sched_rr here.
 	* chopstx-cortex-m.c (chx_sched) [__ARM_ARCH_6M__]: Use
 	new interface of chx_ready_pop.
